--- a/CSS/index.css
+++ b/CSS/index.css
@@ -85,6 +85,38 @@ header > div {
     left: 2vw;
 }
 
+.sidebar{
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 999;
+    height: 30vh;
+    background-color:rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(20px);
+    box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
+     display: none;
+    flex-direction: column;
+    align-items:flex-start;
+    justify-content: flex-start;
+    margin-left: 70vw;
+
+
+}
+
+.sidebar li{
+    width: 100%;
+}
+
+.sidebar{
+    width: 100%;
+}
+
+.menu-button{
+    display: none;
+    margin-left: 55vw;
+}
+
+
 
 /* --------------------------------------------------------------------------- */
 
